# glue

./: .coveragerc  .environment.yml  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .setup_app_trigger.sh  .setup_conda.sh  .test-docs.sh  .travis.yml  .trigger_app_build.sh  CHANGES.md  CHANGES.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  RELEASE.rst  appveyor.yml  azure-pipelines.yml  azure-template.yml  circle.yml  codecov.yml  conftest.py  glueviz.desktop  pyproject.toml  pytest.ini  readthedocs.yml  setup.cfg  setup.py  setupext.py  test.py  tox.ini  trigger_app_build.sh
.circleci/: config.yml
.conda/: prepare_recipe.py
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: ISSUE_TEMPLATE_BUG.md  ISSUE_TEMPLATE_FEATURE.md
.github/workflows/: ci_tests.yml  ci_workflows.yml  run_tests.yml  update-changelog.yaml
.qt_for_python/uic/: options_widget.py
cloudviz/: __init__.py  client.py  coordinates.py  data.py  data_collection.py  data_dendro_cpp.py  events.py  example_data.py  exceptions.py  histogram_client.py  hub.py  image_client.py  io.py  message.py  mpl_histogram_client.py  mpl_image_client.py  mpl_scatter_client.py  mpl_scatter_helper.py  mpl_tree_client.py  roi.py  scatter_client.py  selection.py  subset.py  subset_link.py  translator.py  tree.py  tree_client.py  tree_layout.py  tree_traversal.py  util.py  visual.py  viz_client.py
cloudviz/examples/: Pipe.fits  simple_comm.py  simple_comm.py~  xyz_select.py
cloudviz/qt/: build.py  cloudviz_toolbar.py  cv_qt_resources.py  glue_panel.ui  imagewidget.py  imagewidget.ui  layertree.ui  layertreewidget.py  linker_dialog.py  messagewidget.py  mpl_client.py  mplwidget.py  qt_image_client.py  ui_subsetlinkerdialog.py
cloudviz/sandbox/: scatter.py
cloudviz/tests/: test_communication.py  test_scatter_client.py
continuous-integration/travis/: install_conda_linux.sh  install_conda_osx.sh
doc/: Makefile  advanced.rst  api.rst  architecture.rst  coding_with_glue.rst  conf.py  config_link_example.py  configuration.rst  coord_convert.py  custom_subsets.rst  custom_viewer.rst  customization.rst  data_tutorial.rst  data_viewer_options.rst  dendro.rst  developer_guide.rst  emcee_plugin.py  faq.rst  getting_started.rst  getting_started_old.rst  glue_from_python.rst  gui_documentation.rst  gui_guide.rst  help.rst  index.rst  installation.rst  known_issues.rst  link_tutorial.rst  liveupdate.rst  merging.rst  python_guide.rst  redirect.py  redirects  scripting_interface.rst  simple_glue.py  slice.rst  spectrum.rst  spelling_wordlist.txt  tutorials.rst  videos.rst  (+1 more)
doc/_static/: bball_viewer_1.py  bball_viewer_2.py  bball_viewer_3.py  bball_viewer_4.py  logo.png.tmp$$
doc/_templates/: layout.html
doc/customizing_guide/: available_plugins.rst  configuration.rst  coordinates.rst  custom_viewer.rst  customization.rst  fitting.rst  full_custom_qt_viewer.rst  introduction.rst  matplotlib_qt_viewer.rst  qt_viewer.rst  state_based_qt_viewer.rst  toolbar.rst  units.rst  viewer.rst  writing_plugin.rst
doc/developer_guide/: api.rst  app_building.rst  architecture.rst  coding_guidelines.rst  communication.rst  coordinates.rst  core_architecture.rst  data.rst  developer_guide.rst  getting_started.rst  issues.rst  linking.rst  organization.rst  qt_development.rst  random_data.py  release.rst  roadmap.rst  selection.rst  simple_glue.py  testing.rst
doc/getting_started/: index.rst  w5.tgz
doc/gui_guide/: 3d_viewers.rst  components.rst  configuration.rst  custom_subsets.rst  dendro.rst  index.rst  line_fit_plugin.py  link_tutorial.rst  merging.rst  slice.rst  spectrum.rst
doc/installation/: app.rst  conda.rst  conda_navigator.rst  dependencies.rst  developer.rst  glueconda.rst  installation.rst  pip.rst  qt.rst  standalone.rst
doc/python_guide/: custom_viewer.rst  customization.rst  data_translation.rst  data_tutorial.rst  data_viewer_options.rst  (+5 more)
examples/: aj285677t3_votable.xml  catalog_client.py  dendro_oph.fits  ha_regrid.fits  histogram_example.py  oph.py  oph_c2d_yso_catalog.tbl  pipe_cores.vot  selection_catalog.py  selection_image_scatter.py  selection_image_scatter_raster.py  selection_lasso.py  selection_polygon.py  selection_rectangle.py  simple_comm.py  test_table_2.vot  test_tree.py  test_tree.py~  tree_example.py  xyz.py  xyz_select.py
glue/: __init__.py  _deps.py  _mpl_backend.py  _plugin_helpers.py  _settings_helpers.py  _version.py  backends.py  client.py  component_link.py  config.py  config_gen.py  conftest.py  coordinates.py  data.py  data_collection.py  data_dendro_cpp.py  decorators.py  default_config.py  example_data.py  exceptions.py  histogram_client.py  hub.py  image_client.py  keyboard_shortcuts.py  link_manager.py  live_link.py  logger.py  main.py  message.py  mpl_histogram_client.py  mpl_scatter_helper.py  parse.py  qglue.py  roi.py  scatter_client.py  subset.py  subset_link.py  test.py  util.py  version.py  (+2 more)
glue_core.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
qt/: cloudviz_toolbar.py  glue_application.ui  glue_viz_loader_widget.py  imagewidget.py  imagewidget.ui  mplwidget.py  qt_demo.py  qt_demo_2.py  qt_image_client.py  qt_linker_dialog.py  qt_scatter_client.py  qt_subset_browser_client.py  qt_tree_client.py  qtutil.py  scatter_ui.py  scatterwidget.py  scatterwidget.ui  simple_mpl_client.ui  subsetlinkerdialog.ui  test_scatter_widget.py  test_table_1.vot  ui_imagewidget.py  ui_messagewidget.py  ui_scatterwidget.py
scripts/: glueconfig  glueqt
tests/: README.md  example_data.py  test_all.py  test_application.py  test_client.py  test_communication.py  test_component.py  test_component_link.py  test_coordinates.py  test_data.py  test_data_collection.py  test_data_retrieval.py  test_hub.py  test_image_client.py  test_image_widget.py  test_layertreewidget.py  test_link_manager.py  test_mouse_mode.py  test_parse.py  test_roi.py  test_scatter_client.py  test_scatter_widget.py  test_simple_comm.py  test_subset.py  test_toolbar.py  test_tree.py  test_tree_traversal.py  test_util.py
(+1017 files in other folders)
