[metadata]
name = glue-core
url = http://glueviz.org
author = Thomas Robitaille, Chris Beaumont
author_email = glueviz@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Multidimensional data visualization across files
long_description = file: README.rst

# NOTE: below we have to exclude ipykernel 5.0.0 and 5.1.0 below due to a bug
# that caused issues in the IPython terminal. For more details:
# https://github.com/ipython/ipykernel/pull/376

[options]
zip_safe = False
packages = find:
python_requires = >=3.6
setup_requires = setuptools_scm
install_requires =
    numpy>=1.11
    matplotlib>=2.1
    scipy>=1.0
    pandas>=0.14
    astropy>=2.0
    setuptools>=30.3.0
    qtpy>=1.3
    ipython>=4.0
    ipykernel>=4.0,!=5.0.0,!=5.1.0
    qtconsole>=4.3
    dill>=0.2
    xlrd>=1.0
    h5py>=2.4
    mpl-scatter-density>=0.5
    bottleneck>=1.2

[options.entry_points]
glue.plugins =
    export_d3po = glue.plugins.export_d3po:setup
    pv_slicer = glue.plugins.tools.pv_slicer:setup
    coordinate_helpers = glue.plugins.coordinate_helpers:setup
    wcs_autolinking = glue.plugins.wcs_autolinking:setup
    spectral_cube = glue.plugins.data_factories.spectral_cube:setup
    dendro_factory = glue.plugins.dendro_viewer:setup
    dendro_viewer = glue.plugins.dendro_viewer.qt:setup
    image_viewer = glue.viewers.image.qt:setup
    scatter_viewer = glue.viewers.scatter.qt:setup
    histogram_viewer = glue.viewers.histogram.qt:setup
    profile_viewer = glue.viewers.profile.qt:setup
    table_viewer = glue.viewers.table.qt:setup
    data_exporters = glue.core.data_exporters:setup
    fits_format = glue.io.formats.fits:setup
    export_python = glue.plugins.tools:setup
console_scripts =
    glue-config = glue.config_gen:main
    glue-deps = glue._deps:main
gui_scripts =
    glue = glue.main:main

[options.extras_require]
all =
    scipy
    scikit-image
    PyAVM
    astrodendro
    spectral-cube
docs =
    sphinx
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-rtd-theme
astronomy =
    PyAVM
    astrodendro
    spectral-cube
recommended =
    scikit-image
qt =
    PyQt5>=5.9
test =
    pytest
    pytest-cov
    pytest-faulthandler
    objgraph
    mock

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot
glue.core.data_factories.tests = data/*.jpg
glue.external.pvextractor = LICENSE
glue.viewers.histogram.qt.tests = data/*.glu
glue.viewers.image.qt.tests = data/*.glu, baseline/*.png
glue.viewers.profile.qt.tests = data/*.glu
glue.viewers.scatter.qt.tests = data/*.glu

[flake8]
ignore = E501,E731,F841,E127,E741,E402,W504,W605

[tool:pytest]
addopts=-p no:logging
flake8-ignore = E501,E731,F841,E127,E741,E402,W504,W605
filterwarnings =
    ignore::PendingDeprecationWarning:xlrd
    ignore:Session._key_changed is deprecated
    ignore:zmq.* is deprecated
    ignore:can't be aliased because it is another magic command
    ignore:DragAndDropTerminal._style_sheet_changed is deprecated
    ignore:::ipykernel
    ignore:Accessing zmq Socket attribute
    ignore:'U' mode is deprecated:DeprecationWarning:PyQt5
