[metadata]
name = glue-core
url = http://glueviz.org
author = Thomas Robitaille, Chris Beaumont
author_email = glueviz@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Multidimensional data visualization across files
long_description = file: README.rst

# NOTE: below we have to exclude ipykernel 5.0.0 and 5.1.0 below due to a bug
# that caused issues in the IPython terminal. For more details:
# https://github.com/ipython/ipykernel/pull/376

[options]
zip_safe = False
packages = find:
python_requires = >=3.8
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17
    matplotlib>=3.2
    scipy>=1.1
    pandas>=1.2
    echo>=0.6
    astropy>=4.0
    setuptools>=30.3.0
    qtpy>=1.9
    ipython>=4.0
    ipykernel>=4.0,!=5.0.0,!=5.1.0
    qtconsole>=4.3
    dill>=0.2
    h5py>=2.10; python_version<'3.11'
    xlrd>=1.2
    openpyxl>=3.0
    mpl-scatter-density>=0.7
    pvextractor>=0.2

[options.entry_points]
glue.plugins =
    export_d3po = glue.plugins.export_d3po:setup
    pv_slicer = glue.plugins.tools.pv_slicer.qt:setup
    coordinate_helpers = glue.plugins.coordinate_helpers:setup
    wcs_autolinking = glue.plugins.wcs_autolinking:setup
    dendro_factory = glue.plugins.dendro_viewer:setup
    dendro_viewer = glue.plugins.dendro_viewer.qt:setup
    image_viewer = glue.viewers.image.qt:setup
    scatter_viewer = glue.viewers.scatter.qt:setup
    histogram_viewer = glue.viewers.histogram.qt:setup
    profile_viewer = glue.viewers.profile.qt:setup
    table_viewer = glue.viewers.table.qt:setup
    data_exporters = glue.core.data_exporters:setup
    fits_format = glue.io.formats.fits:setup
    export_python = glue.plugins.tools:setup
    directory_importer = glue.io.qt.directory_importer:setup
console_scripts =
    glue-config = glue.config_gen:main
    glue-deps = glue._deps:main
gui_scripts =
    glue = glue.main:main

[options.extras_require]
all =
    scipy
    scikit-image
    PyAVM
    astrodendro
    h5py>=2.10
    spectral-cube
    # See https://github.com/python-pillow/Pillow/issues/4509
    # for why we exclude pillow 7.1.0
    pillow!=7.1.0
docs =
    sphinx
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-rtd-theme
astronomy =
    PyAVM
    astrodendro
    spectral-cube
recommended =
    scikit-image
qt =
    PyQt5>=5.14
test =
    pytest
    pytest-cov
    pytest-faulthandler
    pytest-flake8
    h5py>=2.10; platform_system=="Linux"
    objgraph

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot
glue.core.data_factories.tests = data/*.jpg
glue.viewers.histogram.qt.tests = data/*.glu
glue.viewers.image.qt.tests = data/*.glu, baseline/*.png
glue.viewers.profile.qt.tests = data/*.glu
glue.viewers.scatter.qt.tests = data/*.glu

[flake8]
ignore = E226,E501,E731,F841,E127,E741,E402,W504,W605

[tool:pytest]
addopts=-p no:logging
flake8-ignore = E226,E501,E731,F841,E127,E741,E402,W504,W605
filterwarnings =
    ignore::PendingDeprecationWarning:xlrd
    ignore:Session._key_changed is deprecated
    ignore:zmq.* is deprecated
    ignore:can't be aliased because it is another magic command
    ignore:DragAndDropTerminal._style_sheet_changed is deprecated
    ignore:::ipykernel
    ignore:Accessing zmq Socket attribute
    ignore:'U' mode is deprecated:DeprecationWarning:PyQt5

[coverage:run]
omit =
    glue/*tests/*
    glue/qt/ui/*
    glue/core/odict.py,
    glue/core/glue_pickle.py
    glue/external/*
    */glue/*tests/*
    */glue/qt/ui/*
    */glue/core/odict.py,
    */glue/core/glue_pickle.py
    */glue/external/*

[coverage:paths]
source =
    glue/
    */site-packages/glue
    *\site-packages\glue

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
