[metadata]
name = glue-core
url = http://glueviz.org
author = Thomas Robitaille, Chris Beaumont
author_email = glueviz@gmail.com
classifiers =
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Topic :: Scientific/Engineering :: Visualization
    License :: OSI Approved :: BSD License
description = Core library for the glue multidimensional data visualization project
long_description = file: README.rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.10
setup_requires = setuptools_scm
install_requires =
    numpy>=1.17
    matplotlib>=3.2
    scipy>=1.1
    pandas>=1.2
    echo>=0.6
    astropy>=4.0
    fast_histogram>=0.12
    ipython>=4.0
    dill>=0.2
    h5py>=2.10; python_version<'3.11'
    xlrd>=1.2
    openpyxl>=3.0
    mpl-scatter-density>=0.8
    importlib_resources>=1.3; python_version<'3.9'
    importlib_metadata>=3.6; python_version<'3.10'
    shapely>=2.0

[options.entry_points]
glue.plugins =
    coordinate_helpers = glue.plugins.coordinate_helpers:setup
    wcs_autolinking = glue.plugins.wcs_autolinking:setup
    dendro_factory = glue.plugins.dendro_viewer:setup
    data_exporters = glue.core.data_exporters:setup
    fits_format = glue.io.formats.fits:setup
    export_python = glue.plugins.tools:setup
console_scripts =
    glue-config = glue.config_gen:main

[options.extras_require]
all =
    scipy
    scikit-image
    PyAVM
    astrodendro
    h5py>=2.10
    spectral-cube
    # See https://github.com/python-pillow/Pillow/issues/4509
    # for why we exclude pillow 7.1.0
    pillow!=7.1.0
docs =
    sphinx<7
    sphinx-automodapi
    sphinxcontrib-spelling
    numpydoc
    sphinx-book-theme
astronomy =
    PyAVM
    astrodendro
    spectral-cube
recommended =
    scikit-image
test =
    pytest
    pytest-cov
    pytest-faulthandler
    pytest-flake8
    h5py>=2.10; platform_system=="Linux"
    objgraph
visualtest =
    pytest-mpl

[options.package_data]
* = *.png, *.ui, *.glu, *.hdf5, *.fits, *.xlsx, *.txt, *.csv, *.svg, *.vot
glue.core.data_factories.tests = data/*.jpg

[flake8]
ignore = E226,E501,E731,F841,E127,E741,E402,W504,W605

[tool:pytest]
addopts=-p no:logging
flake8-ignore = E226,E501,E731,F841,E127,E741,E402,W504,W605
filterwarnings =
    ignore::PendingDeprecationWarning:xlrd
    ignore:Session._key_changed is deprecated
    ignore:zmq.* is deprecated
    ignore:can't be aliased because it is another magic command
    ignore:DragAndDropTerminal._style_sheet_changed is deprecated
    ignore:::ipykernel
    ignore:Accessing zmq Socket attribute

[coverage:run]
omit =
    glue/tests/*
    glue/*/tests/*
    glue/*/*/tests/*
    glue/*/*/*/tests/*
    glue/external/*
    */glue/tests/*
    */glue/*/tests/*
    */glue/*/*/tests/*
    */glue/*/*/*/tests/*
    */glue/external/*

[coverage:paths]
source =
    glue/
    */site-packages/glue
    *\site-packages\glue

[coverage:report]
exclude_lines =
    # Have to re-enable the standard pragma
    pragma: no cover
    # Don't complain about packages we have installed
    except ImportError
    # Don't complain if tests don't hit assertions
    raise AssertionError
    raise NotImplementedError
    # Don't complain about script hooks
    def main\(.*\):
    # Ignore branches that don't pertain to this version of Python
    pragma: py{ignore_python_version}
    # Don't complain about IPython completion helper
    def _ipython_key_completions_
